# basilisk

./: Cargo.toml  README.md
benches/: benchmarks.rs
examples/: config.toml
src/: app.rs  bell.rs  clipboard.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/ansi/: csi.rs  handler.rs  kitty.rs  mod.rs  osc.rs  parser.rs  sixel.rs
src/input/: bindings.rs  keyboard.rs  mod.rs  mouse.rs
src/mux/: ipc.rs  layout.rs  mod.rs  multiplexer.rs  pane.rs  persist.rs  session.rs  window.rs
src/pty/: mod.rs  unix.rs
src/render/: atlas.rs  emoji.rs  glyph.rs  mod.rs  pipeline.rs  renderer.rs  shader.wgsl  sixel.rs  text.rs  window.rs
src/ssh/: auth.rs  client.rs  known_hosts.rs  mod.rs
src/term/: cell.rs  cursor.rs  grid.rs  mod.rs  scrollback.rs  selection.rs  terminal.rs  url.rs
src/window/: event_loop.rs  mod.rs
tests/: terminal_integration.rs
