[package]
name = "basilisk"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated terminal emulator with built-in multiplexing"
license = "MIT"
repository = "https://github.com/sudokatie/basilisk"
keywords = ["terminal", "emulator", "gpu", "wgpu"]
categories = ["command-line-utilities"]

[dependencies]
# Windowing and GPU
winit = "0.30"
wgpu = "24"
pollster = "0.4"

# Font rendering
fontdue = "0.9"

# Terminal
unicode-segmentation = "1.11"
unicode-width = "0.2"
bitflags = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH client
russh = "0.49"
russh-keys = "0.49"
async-trait = "0.1"

# PTY (Unix only)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "process", "signal", "fs", "poll"] }
libc = "0.2"

# Config and serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"

# GPU buffer types
bytemuck = { version = "1", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Directories
dirs = "6"

# File watching for config hot reload
notify = "7"

# Platform-specific window handle for opacity
raw-window-handle = "0.6"

# Benchmarking
criterion = { version = "0.5", optional = true }

# Base64 for OSC 52
base64 = "0.22"

# JSON for session persistence
serde_json = "1"

# Open URLs in browser
open = "5"

# URL detection
regex = "1"
once_cell = "1"

# macOS window manipulation
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

# Image decoding (for Kitty graphics PNG support)
image = { version = "0.25", default-features = false, features = ["png"] }

# Compression (for Kitty graphics zlib support)
flate2 = "1"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[features]
default = []
bench = ["criterion"]

[[bin]]
name = "basilisk"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false
